2002-07-03  Andras Varga

	* modinsp2.tcl (graphmodwin_animate): set upper limit to animation 
	steps (100) so that animation of a message sending finishes in 
	tolerable time period even on very long connections.

2002-05-27  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* main.tcl (create_omnetpp_window): increased event number status
	bar field width by 3 digits - it was limited in size to 1.000.000
	events.

2002-05-04  ------ omnetpp-2.2 released ------

2002-03-14  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* tkapp.h: define TKENV_EXTRASTACK dependent on the system
	architecture. Currently SUNSPARC is known to need more stack space
	with TCL/TK 8.3

2002-03-08  Ulrich Kaage <kaage@int.uni-karlsruhe.de>

	* structinsp.cc (flush_if_needed): Compile Fix for gcc versions
	2.95.3 (complaints) and 3.0.x (errors): declare buf and s as non
	const function call arguments.

2002-03-08  Andras Varga

	* structinsp.cc (update()): keep buffer size low by periodically
        flushing it to the text widget

2002-03-05  Andras Varga

	* modinsp.cc, modinsp2.tcl: Bugfix: each display string change had
        the unwanted side effect of rearranging randomly placed submodules.
        Basic idea of fix: start Tcl's RNG from the same seed value
        at each redraw, thus we get identical results; seed is stored per
        (and in the) inspector object. 'Rearrange' button changes the seed to
        get a different arrangement.

2002-03-03  Andras Varga

	* tkapp.cc, tkapp.h, tkcmd.cc: adopted to changes in the sim kernel.
	(See include/ChangeLog)

	* windows.tcl: cosmetics on file viewer dialog.

	* main.tcl, menuproc.tcl: refinements on implementation of the
	View|Output vector file, Output scalar file, Snapshot file menu items.

2002-02-29  Andras Varga

	* dialogs.tcl: implemented backwards search/replace

2002-02-24  Andras Varga

	* tkapp.cc: improvement on breakpoint handling.

2002-02-06  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
